<resources>
    <string name="app_name">Beer log</string>
    <string name="nome">Beer name</string>
    <string name="ibu">IBU</string>
    <string name="abv">ABV</string>
    <string name="consideracoes">Considerations</string>
    <string name="nacionalidade_cerveja">Beer nacionality</string>
    <string name="nacional">Brazil</string>
    <string name="importada">Others</string>
    <string name="recomendacao">I recommned this beer</string>
    <string name="classificacao">Classification</string>
    <string name="limpar">Clean</string>
    <string name="salvar">Save</string>

    <string-array name="classificacao_array">
        <item>1 Star</item>
        <item>2 Stars</item>
        <item>3 Stars</item>
        <item>4 Stars</item>
        <item>5 Stars</item>
        <item>6 Stars</item>
        <item>7 Stars</item>
        <item>8 Stars</item>
        <item>9 Stars</item>
        <item>10 Stars</item>
    </string-array>

    <string-array name="cervejas_nome">
<!--        <item>Kaiser</item>-->
<!--        <item>Brahma</item>-->
<!--        <item>Antartica</item>-->
<!--        <item>Budweiser</item>-->
<!--        <item>Heineken</item>-->
<!--        <item>Patagônia</item>-->
<!--        <item>Paulaner</item>-->
<!--        <item>Erdinger</item>-->
<!--        <item>Duvel</item>-->
<!--        <item>Schornstein</item>-->
    </string-array>

    <integer-array name="cervejas_ibu">
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>
        <item>35</item>
        <item>40</item>
        <item>45</item>
        <item>50</item>
    </integer-array>

    <integer-array name="cervejas_abv">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </integer-array>

    <integer-array name="cervejas_recomendacao">
        <item>0</item>
        <item>0</item>
        <item>0</item>
        <item>0</item>
        <item>0</item>
        <item>1</item>
        <item>1</item>
        <item>1</item>
        <item>0</item>
        <item>1</item>
    </integer-array>

    <string-array name="cervejas_estilo">
        <item>Pilsen</item>
        <item>Lager</item>
        <item>Bock</item>
        <item>Weiss</item>
        <item>IPA</item>
        <item>Session IPA</item>
        <item>Pale Ale</item>
        <item>Red Ale</item>
        <item>Dunkel</item>
        <item>Souer</item>
    </string-array>

    <string-array name="cervejas_nacionalidade">
        <item>Outros</item>
        <item>Brasil</item>
        <item>Outros</item>
        <item>Brasil</item>
        <item>Outros</item>
        <item>Brasil</item>
        <item>Outros</item>
        <item>Brasil</item>
        <item>Outros</item>
        <item>Brasil</item>
    </string-array>

    <string-array name="cervejas_consideracoes">
        <item>Boa</item>
        <item>Ruim</item>
        <item>Boa</item>
        <item>Ruim</item>
        <item>Boa</item>
        <item>Ruim</item>
        <item>Boa</item>
        <item>Ruim</item>
        <item>Boa</item>
        <item>Ruim</item>
    </string-array>

    <string name="logo_utfpr_descricao">Logo of UTFPR</string>
    <string name="Sobre">About</string>
    <string name="Adicionar">Add</string>
    <string name="universidade_tecnol_gica_federal_do_paran">Federal University of Technology - PARANÁ</string>
    <string name="nome_do_aluno_ygor_muller">Student name: Ygor Muller</string>
    <string name="curso_desenvolvimento_java_para_dispositivos_m_veis">Course: Desenvolvimento JAVA para dispositivos móveis</string>
    <string name="editar">Edit</string>
    <string name="excluir">Delete</string>
    <string name="e_mail_ygormuller_alunos_utfpr_edu_br" translatable="false">E-mail: ygormuller@alunos.utfpr.edu.br</string>
    <string name="descri_o_cadastra_e_classifica_cervejas_degustadas_de_acordo_com_o_usu_rio">Description: Register and classify tasting beers according to the user.</string>
    <string name="ordenar">Order</string>
    <string name="estilo">Style</string>
    <string name="cadastro_de_cerveja">Beer registration</string>
    <string name="formulario_limpo_com_sucesso">Form clearead successfully!</string>
    <string name="o_nome_obrigat_rio">Name is required!</string>
    <string name="o_estilo_obrigat_rio">Style is required!</string>
    <string name="o_ibu_obrigat_rio">IBU is required!</string>
    <string name="o_abv_obrigat_rio">ABV is required!</string>
    <string name="as_considera_es_s_o_obrigat_rias">Considerations are mandatory!</string>
    <string name="o_ibu_n_o_pode_ser_negativo">The IBU cannot be negative!</string>
    <string name="digite_um_n_mero_v_lido_para_o_ibu">Enter a valid number for the IBU!</string>
    <string name="o_abv_n_o_pode_ser_negativo">The ABV cannot be negative!</string>
    <string name="digite_um_n_mero_v_lido_para_o_abv">Enter a vallid number for the ABV!</string>
    <string name="cerveja_cadastrada">Regisered beer:</string>
    <string name="selecione_a_nacionalidade">Select nationality!</string>
    <string name="recomendado">Recommended</string>
    <string name="deseja_apagar">Do you want to delete the beer \'%1$s\'?</string>
    <string name="confirmacao">Confirmation</string>
    <string name="sim">Yes</string>
    <string name="nao">No</string>

</resources>