<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <TextView
        android:id="@+id/textViewNome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/nome"
        android:textStyle="bold"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="8dp" />

    <TextView
        android:id="@+id/textViewEstilo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/estilo"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewNome"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="8dp" />

    <TextView
        android:id="@+id/textViewIBU"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ibu"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewEstilo"
        android:layout_marginBottom="8dp" />

    <TextView
        android:id="@+id/textViewValorIBU"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@id/textViewIBU"
        app:layout_constraintTop_toBottomOf="@id/textViewEstilo"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp" />

    <TextView
        android:id="@+id/textViewABV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/abv"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewIBU"
        android:layout_marginBottom="8dp" />

    <TextView
        android:id="@+id/textViewValorABV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@id/textViewABV"
        app:layout_constraintTop_toBottomOf="@id/textViewIBU"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp" />

    <TextView
        android:id="@+id/textViewRecomendacao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recomendacao"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewValorABV"
        android:layout_marginBottom="8dp" />

</androidx.constraintlayout.widget.ConstraintLayout>